- Implemented loading/saving frame borders
- Implemented printing frame borders

Reggie, 18.1.1999:
------------------
- Some formatting fixes
- Preperations for more formatting and settings of frames and tables

Reggie, 19.1.1999:
------------------
- Code cleanups
- Internal work for background colors of frames
- Fixes when moving around frames to avoid crashes
- Fixed (or worked around :-) the strange bug when saving embedded objects

Reggie, 20.1.1999:
------------------
- Changed the toolbar pixmaps for choosing colors, which get automatically generated - they show now for what you choose the color
- Setting background colors for frames works
- setting the ranges of scrollbars is correctly now (no maxrange > minrange warnings anymore)
- Loading, Saving and Printing background colors of frame works

Reggie, 21.1.1999:
------------------
- Selecting multiple cells in a table is more comfortable
- Some more fixes to avoid crashes when inserting objects
- Fixed saving/loading background colors of frames

Reggie, 23.1.1999:
------------------
- Added menu and toolbar for table settings
- Added dialog for inserting rows/cols in tables
- Implemented inserting rows in tables
- Implemented inserting columns in tables

Reggie, 24.1.1999:
------------------
- If the cursor is in a table, CTRL-Return inserts a new row below the row, where the cursor currently is
- If the cursor is in a normal text frame, CTRL-Return makes a hard break (jumps to next frame)
- Added menu item for inserting a hard frame break

Reggie, 25.1.1999:
------------------
- Added dialog for deleting rows/cols in tables
- Implemented deleting rows and columns
- Did some internal stuff for margins in frames
- Some fixes and improvements in saving/loading
- Frame margins can be saved/loaded now
- Another fix with embedded objects
- Non-textframes can have borders too now

Reggie, 26.1.1999:
------------------
- Added saving/loading hard frame breaks (seems that I forgot that...)